[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca-cli"
version = "0.1.0"
dependencies = [
    "huggingface_hub", 
    "httpx", 
    "argcomplete", 
    "psutil"
]

[project.optional-dependencies]
all = ["vllm", "ray"]
vllm = ["vllm"]
ray = ["ray"]

[project.scripts]
alpaca = "alpaca:main"
