[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca-cli"
version = "0.1.0"
dependencies = [
  "huggingface_hub",
  "httpx",
  "argcomplete",
  "psutil",
  "torch",
]

[tool.setuptools]
py-modules = ["alpaca"]

[project.optional-dependencies]
all = ["vllm", "ray"]
vllm = ["vllm"]
ray = ["ray"]

[project.scripts]
alpaca = "alpaca:main"
