[build-system]
requires = ["setuptools", 
"wheel", 
"setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca-cli"
version = "0.1.0"
description = "Ollama-style wrapper for vLLM with Docker backend and Ray distributed inference"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alpaca Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "huggingface_hub", 
    "httpx", 
    "argcomplete", 
    "psutil"
]

[project.urls]
Homepage = "https://github.com/Slownite/alpaca"
Repository = "https://github.com/Slownite/alpaca.git"
Issues = "https://github.com/Slownite/alpaca/issues"

[project.optional-dependencies]
all = ["vllm", "ray"]
vllm = ["vllm"]
ray = ["ray"]

[project.scripts]
alpaca = "alpaca:main"
